Fix z-index

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,12 +30,14 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: -1;
 }
 
 .bg-bottom {
   position: absolute;
   bottom: 0;
   right: 0;
+  z-index: -1;
 }
 
 .header-section {
